--- a/event_badging.html
+++ b/event_badging.html
@@ -43,26 +43,26 @@
 
         <p>Each badge includes a set of grades across key categories to indicate the quality of the protocols in place.</p>
         
-        <p>A <strong>“Robust”</strong> grade indicates that the event’s policies represent good practice as understood at the time this standard was written, and will be enforced.</p>
+        <p>A “<strong>Robust Policy</strong>” grade indicates that the event’s policies represent good practice as understood at the time this standard was written, and will be enforced.</p>
 
-        <p>A <strong>“Not Enforced”</strong> grade indicates that efforts are being made by the organizers, but there are factors that may increase risk for some attendees.</p>
+        <p>A “<strong>Efforts Made</strong>” grade indicates that efforts are being made by the organizers, but there are factors that may increase risk for some attendees.</p>
 
-        <p>A <strong>“No Policy”</strong> grade indicates that meaningful policies have not been implemented.</p>
+        <p>A “<strong>No Policy</strong>” grade indicates that meaningful policies have not been implemented.</p>
 
         <p>This standard will change as medical science, epidemiology, and community practices progress. Because the standard will evolve, an event’s badge is associated with a specific version of the standard indicated by the year and month.</p>
 
-        <p>There are logistical and financial challenges involved in meeting the “Robust” grade, so event organizers who are doing their best may still find a mix of grades. “Not Enforced” and “No Policy” grades are opportunities for attendees to make themselves aware of areas of potential risk, and to assess for themselves how they handle that risk. As an organizer, this is an opportunity for you to communicate the efforts you have made in this area, to help your attendees understand how your event fits their risk profile.</p>
+        <p>There are logistical and financial challenges involved in meeting the “Robust Policy” grade, so event organizers who are doing their best may still find a mix of grades. “Efforts Made” and “No Policy” grades are opportunities for attendees to make themselves aware of areas of potential risk, and to assess for themselves how they handle that risk. As an organizer, this is an opportunity for you to communicate the efforts you have made in this area, to help your attendees understand how your event fits their risk profile.</p>
         
         <div class="card" id="the-pledge">
             <div class="card-body">
                 <span class="material-symbols-sharp floating-badge-icon" aria-hidden="true">masks</span>
                 <span class="sr-only">Mask icon</span>
 
-                <p><strong>Mask</strong> grading criteria:</p>
+                <p><strong>Masks</strong> grading criteria:</p>
 
                 <ul>
-                    <li>Robust: Masks mandatory indoors and when in outdoor spaces where physical distancing cannot be maintained, except for presenters on stage, or attendees who are actively eating or drinking, with enforcement mechanism.</li>
-                    <li>Not Enforced: Masks strongly recommended.</li>
+                    <li>Robust Policy: Masks mandatory indoors and when in outdoor spaces where physical distancing cannot be maintained, except for presenters on stage, or attendees who are actively eating or drinking, with enforcement mechanism.</li>
+                    <li>Efforts Made: Masks are made available and strongly recommended.</li>
                     <li>No Policy: No mention of masks.</li>
                 </ul>
             </div>
@@ -73,11 +73,11 @@
                 <span class="material-symbols-sharp floating-badge-icon" aria-hidden="true">vaccines</span>
                 <span class="sr-only">Vaccine icon</span>
 
-                <p><strong>Vaccine</strong> grading criteria:</p>
+                <p><strong>Vaccines</strong> grading criteria:</p>
 
                 <ul>
-                    <li>Robust: Vaccines mandatory with appropriate exemptions, and a verification mechanism.</li>
-                    <li>Not Enforced: Vaccines strongly recommended.</li>
+                    <li>Robust Policy: Vaccines mandatory with appropriate exemptions, and a verification mechanism.</li>
+                    <li>Efforts Made: Vaccines strongly recommended.</li>
                     <li>No Policy: No mention of vaccines.</li>
                 </ul>
             </div>
@@ -88,11 +88,11 @@
                 <span class="material-symbols-sharp floating-badge-icon" aria-hidden="true">labs</span>
                 <span class="sr-only">Test tube icon</span>
 
-                <p><strong>Testing</strong> grading criteria:</p>
+                <p><strong>Tests</strong> grading criteria:</p>
 
                 <ul>
-                    <li>Robust: Daily negative test result required with a verification mechanism.</li>
-                    <li>Not Enforced: Tests are made available or strongly recommended.</li>
+                    <li>Robust Policy: Daily negative test result required with a verification mechanism.</li>
+                    <li>Efforts Made: Tests are made available and strongly recommended.</li>
                     <li>No Policy: Tests not required.</li>
                 </ul>
             </div>
@@ -106,8 +106,8 @@
                 <p><strong>Ventilation</strong> grading criteria:</p>
 
                 <ul>
-                    <li>Robust: Outdoors, or indoors with ventilation and air purification commensurate with capacity.</li>
-                    <li>Not Enforced: Indoors with active air exchange with the outdoors.</li>
+                    <li>Robust Policy: Outdoors, or indoors with ventilation and air purification commensurate with capacity.</li>
+                    <li>Efforts Made: Indoors with active air exchange with the outdoors.</li>
                     <li>No Policy: Indoors with no outdoor ventilation and no air purification.</li>
                 </ul>
             </div>
@@ -121,8 +121,8 @@
                 <p><strong>Alternatives</strong> grading criteria:</p>
 
                 <ul>
-                    <li>Robust: Participants who exhibit symptoms or test positive during, or right before, the event have access to no questions asked refunds, exchanges, and remote participation options.</li>
-                    <li>Not Enforced: Participants who exhibit symptoms or test positive during, or right before, the event have access to refunds, exchanges, or remote participation options.</li>
+                    <li>Robust Policy: Participants who exhibit symptoms or test positive during, or right before, the event have access to no questions asked refunds, exchanges, and remote participation options.</li>
+                    <li>Efforts Made: Participants who exhibit symptoms or test positive during, or right before, the event have access to refunds, exchanges, or remote participation options.</li>
                     <li>No Policy: No refunds, exchanges, or remote participation options.</li>
                 </ul>
             </div>
