rename, add to nav, and add feedback links

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <nav class="navbar-nav-scroll">
             <div class="navbar-nav bd-navbar-nav flex-row" id="nav">
                 <span class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></span>
+                <span class="nav-item"><a class="nav-link" href="/badging">Event Badging</a></span>
             </div>
         </nav>
 
