--- a/badging.html
+++ b/badging.html
@@ -2,16 +2,16 @@
 <html dir="ltr" lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>The Public Health Pledge, committing to safer and more inclusive events</title>
+    <title>Event Badging Standard by The Public Health Pledge</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="third_party/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="third_party/material-symbols/index.css">
     <meta property="og:image" content="img/icon.png">
-    <meta property="og:description" content="We are committing to safer and more inclusive events. You can too.">
-    <meta property="og:title" content="The Public Health Pledge, committing to safer and more inclusive events">
-    <meta name="twitter:title" content="The Public Health Pledge, committing to safer and more inclusive events">
+    <meta property="og:description" content="The Public Health Pledge event badging standard can be used to quickly convey info about Health and Safety protocols, to help prospective participants assess risk.">
+    <meta property="og:title" content="Event Badging Standard by The Public Health Pledge">
+    <meta name="twitter:title" content="Event Badging Standard by The Public Health Pledge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
