--- a/badging.html
+++ b/badging.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>Event Badging Standard by The Public Health Pledge</title>
+    <title>Event Badging Standard v2023-01 by The Public Health Pledge</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css">
