minor revision for consistency, update date, add signatory

--- a/badging.html
+++ b/badging.html
@@ -96,7 +96,7 @@
                 <ul>
                     <li>Robust Policy: Daily negative test result required with a verification mechanism.</li>
                     <li>Efforts Made: Tests are made available and strongly recommended.</li>
-                    <li>No Policy: Tests not required.</li>
+                    <li>No Policy: No mention of tests.</li>
                 </ul>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-27. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-01-30. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
