--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
             <li>Wen Kokke, Research Associate, University of Strathclyde</li>
             <li><a href="https://www.theresnotime.co.uk">Sammy Tarling</a>, Software Engineer, Wikimedia Foundation</li>
             <li><a href="https://constantia.io/">Melissa Logan</a>, Director for Data Mesh Learning & Data on Kubernetes Community</li>
+            <li>Tony Wasserman, Professor</li>
         </ul>
 
     </main>
@@ -266,7 +267,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-01-30. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-01. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
