--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
             <li><a href="https://www.theresnotime.co.uk">Sammy Tarling</a>, Software Engineer, Wikimedia Foundation</li>
             <li><a href="https://constantia.io/">Melissa Logan</a>, Director for Data Mesh Learning & Data on Kubernetes Community</li>
             <li>Tony Wasserman, Professor</li>
+            <li><a href="https://www.conferencesthatwork.com">Adrian Segar</a>, Meeting designer and facilitator, Conferences That Work</li>
         </ul>
 
     </main>
@@ -267,7 +268,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-01. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-03. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
