--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
             <li><a href="https://constantia.io/">Melissa Logan</a>, Director for Data Mesh Learning & Data on Kubernetes Community</li>
             <li>Tony Wasserman, Professor</li>
             <li><a href="https://www.conferencesthatwork.com">Adrian Segar</a>, Meeting designer and facilitator, Conferences That Work</li>
+            <li><a href="https://jdreben.omg.lol">James Dreben</a></li>
+            <li>Shauna Gordon-McKeon, Open Source Developer and Community Manager</li>
+            <li><a href="https://beekeeping.ninja/@Pagan_Animist">Connie Lazenby</a>, Event Planner - Politics</li>
         </ul>
 
     </main>
@@ -268,7 +271,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-03. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
