--- a/badging.html
+++ b/badging.html
@@ -136,13 +136,13 @@
     <footer class="container-fluid">
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
-                    <a href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                    <a href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
                 <p>
-                    Last updated 2023-01-30. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
