--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
-                <a class="btn btn-link" href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                <a class="btn btn-link" href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
 
         <h2 class="display-4">Institutional Signatories</h2>
 
-        <a href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event or organization</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+        <a href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event or organization</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <div id="logos">
             <a href="https://openinfra.dev/summit" title="OpenInfra Summit Vancouver 2023"><img src="assets/orgs/OpenInfraSummit.png" alt="OpenInfra Summit Vancouver logo"></a>
@@ -258,6 +258,10 @@
             <li><a href="https://jdreben.omg.lol">James Dreben</a></li>
             <li>Shauna Gordon-McKeon, Open Source Developer and Community Manager</li>
             <li><a href="https://beekeeping.ninja/@Pagan_Animist">Connie Lazenby</a>, Event Planner - Politics</li>
+            <li>Claudio Calvelli, Software developer</li>
+            <li>Alex Ball, Manager, software documentation</li>
+            <li><a href="https://kevinbruce.com">Kevin H Bruce</a>, IT Coordinator</li>
+            <li><a href="https://shalf.me">Yann "shalf" Heurtaux</a>, Copywriter, coworking hacktivist</li>
         </ul>
 
     </main>
@@ -265,13 +269,13 @@
     <footer class="container-fluid">
                 <p id="footer-links">
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
-                    <a href="https://phpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                    <a href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
                 <p>
-                    Last updated 2023-02-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
