--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <ul class="list-unstyled">
-            <li><a href="https://josh.tel/@josh">Joshua R. Simmons</a>, Foundations Advocate, former Chair of Open Source Initiative</li>
+            <li><a href="https://joshsimmons.com">Joshua R. Simmons</a>, Foundations Advocate, former Chair of Open Source Initiative</li>
             <li><a href="https://opensourcestories.org/">Amanda Casari</a>, Co-founder of Open Source Stories</li>
             <li><a href="https://social.coop/@chrisjrn">Christopher Neugebauer</a></li>
             <li><a href="https://twitter.com/ParisInBmore">Paris Pittman</a></li>
@@ -262,6 +262,9 @@
             <li>Alex Ball, Manager, software documentation</li>
             <li><a href="https://kevinbruce.com">Kevin H Bruce</a>, IT Coordinator</li>
             <li><a href="https://shalf.me">Yann "shalf" Heurtaux</a>, Copywriter, coworking hacktivist</li>
+            <li><a href="https://zeroes.ca/@mikee">Mikee Schwinn</a>, Event Producer</li>
+            <li><a href="https://juliaferraioli.com">julia ferraioli</a>, Co-founder, Open Source Stories</li>
+            <li>Andy Tinkham, Software Security Architect</li>
         </ul>
 
     </main>
@@ -275,7 +278,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
