update link to badging repo

--- a/badging.html
+++ b/badging.html
@@ -52,7 +52,7 @@
             <li>“<strong>No Policy</strong>” grade indicates that meaningful policies have not been implemented.</li>
         </ul>
 
-        <p>This standard will change as medical science, epidemiology, and community practices progress. Because the standard will evolve, an event’s badge is associated with a specific version of the standard indicated by the year and month. Please submit feedback to <a href="mailto:phpledge@googlegroups.com">phpledge@googlegroups.com</a> or <a href="https://github.com/joshsimmons/publichealthpledge.com">on GitHub</a>.</p>
+        <p>This standard will change as medical science, epidemiology, and community practices progress. Because the standard will evolve, an event’s badge is associated with a specific version of the standard indicated by the year and month. Please submit feedback to <a href="mailto:phpledge@googlegroups.com">phpledge@googlegroups.com</a> or <a href="https://github.com/phpledge/badging/issues">on GitHub</a>.</p>
 
         <p>There are logistical and financial challenges involved in meeting the “Robust Policy” grade, so event organizers who are doing their best may still find a mix of grades. “Efforts Made” and “No Policy” grades are opportunities for attendees to make themselves aware of areas of potential risk, and to assess for themselves how they handle that risk. As an organizer, this is an opportunity for you to communicate the efforts you have made in this area, to help your attendees understand how your event fits their risk profile.</p>
         
@@ -142,7 +142,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-07. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
