--- a/badging.html
+++ b/badging.html
@@ -55,6 +55,8 @@
         <p>This standard will change as medical science, epidemiology, and community practices progress. Because the standard will evolve, an event’s badge is associated with a specific version of the standard indicated by the year and month. Please submit feedback to <a href="mailto:phpledge@googlegroups.com">phpledge@googlegroups.com</a> or <a href="https://github.com/phpledge/badging/issues">on GitHub</a>.</p>
 
         <p>There are logistical and financial challenges involved in meeting the “Robust Policy” grade, so event organizers who are doing their best may still find a mix of grades. “Efforts Made” and “No Policy” grades are opportunities for attendees to make themselves aware of areas of potential risk, and to assess for themselves how they handle that risk. As an organizer, this is an opportunity for you to communicate the efforts you have made in this area, to help your attendees understand how your event fits their risk profile.</p>
+
+        <a class="btn btn-primary" href="https://github.com/phpledge/badging" id="cta-add-your-name"><em>Submit a badging application</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
         
         <div class="card" id="the-pledge">
             <div class="card-body">
