add 2 more signatories, bringing us to 150!

--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
             <li><a href="https://zeroes.ca/@mikee">Mikee Schwinn</a>, Event Producer</li>
             <li><a href="https://juliaferraioli.com">julia ferraioli</a>, Co-founder, Open Source Stories</li>
             <li>Andy Tinkham, Software Security Architect</li>
+            <li><a href="https://med-mastodon.com/@ubikaritas">Kari Birrer-Lundgren</a>, Associate Professor, Rhetoric & Writing</li>
+            <li><a href="https://kolektiva.social/@dangerangel">Jennifer Holmes</a>, Event Producer: Tech, Arts, Music, Politics and Robots</li>
         </ul>
 
     </main>
@@ -278,7 +280,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
