two new signatories \o/

--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
             <li>Andy Tinkham, Software Security Architect</li>
             <li><a href="https://med-mastodon.com/@ubikaritas">Kari Birrer-Lundgren</a>, Associate Professor, Rhetoric & Writing</li>
             <li><a href="https://kolektiva.social/@dangerangel">Jennifer Holmes</a>, Event Producer: Tech, Arts, Music, Politics and Robots</li>
+            <li><a href="https://IsaacCsandl.com">Isaac Csandl</a>, Software engineer/pinball enthusiast</li>
+            <li><a href="https://www.harihareswara.net">Sumana Harihareswara</a>, open source project manager, writer, and trainer, Changeset Consulting</li>
         </ul>
 
     </main>
@@ -280,7 +282,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-02-22. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
