--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
             <li><a href="https://kolektiva.social/@dangerangel">Jennifer Holmes</a>, Event Producer: Tech, Arts, Music, Politics and Robots</li>
             <li><a href="https://IsaacCsandl.com">Isaac Csandl</a>, Software engineer/pinball enthusiast</li>
             <li><a href="https://www.harihareswara.net">Sumana Harihareswara</a>, open source project manager, writer, and trainer, Changeset Consulting</li>
+            <li><a href="https://docpop.org/">Doc Pop</a>, Artist, Performer, Documentarian</li>
+            <li><a href="https://the-maskers-comic.yolasite.com/">Shea O'Neil,</a> Writer</li>
         </ul>
 
     </main>
@@ -282,7 +284,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-02-22. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-03-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
