one more signatory before clocking out!

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
             <li><a href="https://www.harihareswara.net">Sumana Harihareswara</a>, open source project manager, writer, and trainer, Changeset Consulting</li>
             <li><a href="https://docpop.org/">Doc Pop</a>, Artist, Performer, Documentarian</li>
             <li><a href="https://the-maskers-comic.yolasite.com/">Shea O'Neil,</a> Writer</li>
+            <li><a href="https://ourobengr.com/">Tim Serong</a>, Software Engineer</li>
+            <li>Mel Chua, Teacher</li>
         </ul>
 
     </main>
@@ -284,7 +286,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-03-05. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-03-06. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
