--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
             <li><a href="https://the-maskers-comic.yolasite.com/">Shea O'Neil,</a> Writer</li>
             <li><a href="https://ourobengr.com/">Tim Serong</a>, Software Engineer</li>
             <li>Mel Chua, Teacher</li>
+            <li><a href="https://valerieaurora.org/">Valerie Aurora</a>, Co-founder Ada Initiative, AdaCamp unconferences, Linux Plumbers Conference, Linux Storage, Filesystems, MM, and BPF Summit</li>
+            <li>Phil Dennis-Jordan, Software developer and small business owner</li>
         </ul>
 
     </main>
@@ -286,7 +288,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-03-06. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-03-16. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
