--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             <li>Mel Chua, Teacher</li>
             <li><a href="https://valerieaurora.org/">Valerie Aurora</a>, Co-founder Ada Initiative, AdaCamp unconferences, Linux Plumbers Conference, Linux Storage, Filesystems, MM, and BPF Summit</li>
             <li>Phil Dennis-Jordan, Software developer and small business owner</li>
+            <li><a href="https://sites.ualberta.ca/~jenniedo/">Jennifer Dailey-O'Cain</a>, Professor</li>
         </ul>
 
     </main>
@@ -288,7 +289,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-03-16. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-03-19. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
