--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@
             <li>Phil Dennis-Jordan, Software developer and small business owner</li>
             <li><a href="https://sites.ualberta.ca/~jenniedo/">Jennifer Dailey-O'Cain</a>, Professor</li>
             <li><a href="https://decafbad.net">Craig Maloney</a>, Head cook and bottle washer, works with computers.</li>
+            <li><a href="https://adrian.geek.nz/">Adrian Cochrane</a>, Software Developer</li>
+            <li><a href="https://todon.eu/@fenneladon">Fennel Aurora</a>, Product Management Community Lead, F-Secure</li>
         </ul>
 
     </main>
@@ -290,7 +292,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-03-20. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-04-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
