--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
             <li><a href="https://decafbad.net">Craig Maloney</a>, Head cook and bottle washer, works with computers.</li>
             <li><a href="https://adrian.geek.nz/">Adrian Cochrane</a>, Software Developer</li>
             <li><a href="https://todon.eu/@fenneladon">Fennel Aurora</a>, Product Management Community Lead, F-Secure</li>
+            <li>Frann Michel, Professor Emeritus</li>
         </ul>
 
     </main>
@@ -292,7 +293,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-04-09. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-04-10. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
