--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
             <li><a href="https://adrian.geek.nz/">Adrian Cochrane</a>, Software Developer</li>
             <li><a href="https://todon.eu/@fenneladon">Fennel Aurora</a>, Product Management Community Lead, F-Secure</li>
             <li>Frann Michel, Professor Emeritus</li>
+            <li><a href="mastodon.social/@pixplz">Justin Beck</a>, Educator on strike because schools are superspreaders</li>
+            <li><a href="https://www.phoole.com">Ann-Elizabeth Shapera</a>, Entertainer, Event Planner, Organizer</li>
         </ul>
 
     </main>
@@ -293,7 +295,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-04-10. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-04-11. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
