--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <li><a href="https://adrian.geek.nz/">Adrian Cochrane</a>, Software Developer</li>
             <li><a href="https://todon.eu/@fenneladon">Fennel Aurora</a>, Product Management Community Lead, F-Secure</li>
             <li>Frann Michel, Professor Emeritus</li>
-            <li><a href="mastodon.social/@pixplz">Justin Beck</a>, Educator on strike because schools are superspreaders</li>
+            <li><a href="https://mastodon.social/@pixplz">Justin Beck</a>, Educator on strike because schools are superspreaders</li>
             <li><a href="https://www.phoole.com">Ann-Elizabeth Shapera</a>, Entertainer, Event Planner, Organizer</li>
         </ul>
 
