add North Bay Python as signatory

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
         <div id="logos">
             <a href="https://openinfra.dev/summit" title="OpenInfra Summit Vancouver 2023"><img src="assets/orgs/OpenInfraSummit.png" alt="OpenInfra Summit Vancouver logo"></a>
+            <a href="https://2023.northbaypython.org/" title="North Bay Python 2023"><img src="assets/orgs/NorthBayPython.png" alt="North Bay Python logo"></a>
         </div>
 
         <h2 class="display-4">Individual Signatories</h2>
@@ -295,7 +296,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-04-11. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-05-17. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
