--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
             <li>Frann Michel, Professor Emeritus</li>
             <li><a href="https://mastodon.social/@pixplz">Justin Beck</a>, Educator on strike because schools are superspreaders</li>
             <li><a href="https://www.phoole.com">Ann-Elizabeth Shapera</a>, Entertainer, Event Planner, Organizer</li>
+            <li><a href="https://mastodon.social/@pitrh">Peter N. M. Hansteen</a>, Unixhead, network charmer, writer, conference organizer</li>
+            <li>Joachim Plack</li>
+            <li>Mx Max Ursa X Wolfstache</li>
+            <li><a href="https://interpeer.io/">Jens Finkhaeuser</a>, Founder of the Interpeer Project</li>
         </ul>
 
     </main>
@@ -296,7 +300,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-05-17. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-07-21. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
