--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
             <li>Joachim Plack</li>
             <li>Mx Max Ursa X Wolfstache</li>
             <li><a href="https://interpeer.io/">Jens Finkhaeuser</a>, Founder of the Interpeer Project</li>
+            <li>Brendon Nacewicz, Psychiatrist, Neuroscience Researcher</li>
+            <li>Kat Naphas</li>
         </ul>
 
     </main>
@@ -300,7 +302,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-07-21. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-07-25. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
