--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             <li><a href="https://interpeer.io/">Jens Finkhaeuser</a>, Founder of the Interpeer Project</li>
             <li>Brendon Nacewicz, Psychiatrist, Neuroscience Researcher</li>
             <li>Kat Naphas</li>
+            <li><a href="https://jacky.wtf/about">Jacky Alcine</a>, Software Engineer</li>
         </ul>
 
     </main>
@@ -302,7 +303,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-07-25. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-07-26. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
