--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <ul class="list-unstyled">
-            <li><a href="https://joshsimmons.com">Joshua R. Simmons</a>, Foundations Advocate, former Chair of Open Source Initiative</li>
+            <li><a href="https://joshsimmons.com">Joshua R. Simmons</a>, Partner at Open Chapters, former Chair of Open Source Initiative</li>
             <li><a href="https://opensourcestories.org/">Amanda Casari</a>, Co-founder of Open Source Stories</li>
             <li><a href="https://social.coop/@chrisjrn">Christopher Neugebauer</a></li>
             <li><a href="https://twitter.com/ParisInBmore">Paris Pittman</a></li>
